NOJIRA fjerne bruk av JournalV2 og InngaaendeV1 sin hentjournalpost